<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="@dimen/dimen_32dp"
	android:paddingEnd="@dimen/dimen_32dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:background="@drawable/shape_fragment_user_info_bgr"
		android:orientation="vertical"
		android:paddingStart="@dimen/dimen_14dp"
		android:paddingTop="@dimen/dimen_20dp"
		android:paddingEnd="@dimen/dimen_14dp"
		android:paddingBottom="@dimen/dimen_20dp"
		tools:ignore="UselessParent">

		<!-- Title -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/title_fragment_phone_verification"
			android:textAlignment="center"
			android:textColor="@color/color_white"
			android:textSize="@dimen/text_18sp"
			android:textStyle="bold" />

		<!-- Explanation -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dimen_12dp"
			android:text="@string/explanation_fragment_phone_verification"
			android:textAlignment="center"
			android:textColor="@color/color_white"
			android:textSize="@dimen/text_16sp" />

		<!--OTP Input Field -->
		<com.bluespark.raffleit.common.views.EditTextCustomView
			android:id="@+id/etcv_otp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dimen_14dp"
			android:imeOptions="actionGo"
			android:inputType="text"
			app:hintText="@string/hint_otp_etcv"
			app:titleColor="@color/color_white"
			app:titleText="@string/title_otp_etcv" />
	</LinearLayout>
</FrameLayout>